CSS for spacing & fix QR on safari

--- a/css/scss/_begin.scss
+++ b/css/scss/_begin.scss
@@ -23,15 +23,6 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-weight: 500;
-  line-height: 1.3;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
 h6,
 p,
 ol,
@@ -39,6 +30,14 @@ ul,
 blockquote {
   margin: 0 0 1rem;
   padding: 0;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 500;
+  line-height: 1.3;
+  margin: 0 0 0.625rem;
 }
 ol,
 ul {
@@ -86,6 +85,19 @@ figure {
   top: 5px;
   width: auto;
   z-index: 100000;
+}
+/* SPACING */
+._mb_0 {
+  margin-bottom: 0;
+}
+._mb_5 {
+  margin-bottom: 5px;
+}
+._mb_10 {
+  margin-bottom: 10px;
+}
+._mb_20 {
+  margin-bottom: 20px;
 }
 
 /* WORDPRESS */
@@ -183,6 +195,11 @@ object {
   border-left: 4px solid #000;
   margin: 0 0 28px;
   padding-left: 1em;
+}
+.wp-block-pullquote {
+  border-top: 4px solid #555d66;
+  border-bottom: 4px solid #555d66;
+  margin-bottom: 28px;
 }
 .wp-block-image {
   &.alignwide {
