--- a/css/scss/tablet.scss
+++ b/css/scss/tablet.scss
@@ -39,6 +39,7 @@
   overflow: hidden;
   border-radius: 10px;
   background-color: #fff;
+  transform: translate(0, 0);
   canvas {
     height: 150px;
     width: 150px;
